src/test/deca/context/valid/sansObjet/SommeFloat.Deca
{
    float a = 2.0;
    a = a + 3;
}