src/test/deca/context/invalid/sansObjet/BadIntPlusFloat.deca
{
    int a = 2020 + 0.1;
}